src/theme/default/css/default.css
/* ... */
.desc-rss-feed {
	float: right;
}
[dir=rtl] .desc-rss-feed {
	float: left;
}

.review1 img,
.review2 img,
.watch-off img,
.watch-on img {
	border: medium none;
	height: 1rem;
	width: 1rem;
}
.watch-off img {
	background: url('./../icon/light/watch-off.svg') no-repeat;
}
.watch-on img {
	background: url('./../icon/light/watch-on.svg') no-repeat;
}

@media (prefers-color-scheme: dark) {
	:root:not([data-theme="light"]) {
		.watch-off img {
			background: url('./../icon/dark/watch-off.svg') no-repeat;
		}
		.watch-on img {
			background: url('./../icon/dark/watch-on.svg') no-repeat;
		}
	}
}

:root[data-theme="dark"] {
	.watch-off img {
		background: url('./../icon/dark/watch-off.svg') no-repeat;
	}
	.watch-on img {
		background: url('./../icon/dark/watch-on.svg') no-repeat;
	}
}

.review1 img {
	background: url('./../icon/light/review1.svg') no-repeat;
}
.review2 img {
	background: url('./../icon/light/review2.svg') no-repeat;
}

.ico-sm {
	background-size: 1rem 1rem;
	height: 1rem;
	width: 1rem;
	display: inline-block;
}
.ico-md {
	background-size: 1.375rem 1.375rem;
	height: 1.375rem;
	width: 1.375rem;
	display: inline-block;
}
.ico-reload {
	background: url('./../icon/light/reload.svg') no-repeat;
}
.ico-menu {
	background: url('./../icon/light/menu.svg') no-repeat;
}

.ico-overflow-menu {
	background: url('./../icon/light/overflow-menu.svg') no-repeat;
}
.ico-addbookmark {
	background: url('./../icon/light/bookmark.svg') no-repeat;
}
.ico-removebookmark {
	background: url('./../icon/light/bookmark-remove.svg') no-repeat;
}
.ico-delete {
	background: url('./../icon/light/delete.svg') no-repeat;
}
.ico-edit {
	background: url('./../icon/light/edit.svg') no-repeat;
}
.ico-copy {
	background: url('./../icon/light/copy.svg') no-repeat;
}
.ico-source {
	background: url('./../icon/light/text.svg') no-repeat;
}
.ico-feed {
	background: url('./../icon/light/feed.svg') no-repeat;
}
.ico-info {
	background: url('./../icon/light/dialog-info.svg') no-repeat;
}
.ico-tick {
	background: url('./../icon/light/tick.svg') no-repeat;
}
.ico-warning {
	background: url('./../icon/light/warning.svg') no-repeat;
}
.ico-add-page {
	background: url('./../icon/light/page-add.svg') no-repeat;
}
.ico-page {
	background: url('./../icon/light/show.svg') no-repeat;
}
.ico-comment {
	background: url('./../icon/light/comment.svg') no-repeat;
}
.ico-attachment {
	background: url('./../icon/light/attachment.svg') no-repeat;
}
.ico-upload {
	background: url('./../icon/light/upload.svg') no-repeat;
}
.ico-unlocked {
	background: url('./../icon/light/unlocked.svg') no-repeat;
}
.ico-locked {
	background: url('./../icon/light/locked.svg') no-repeat;
}
.ico-search {
	background: url('./../icon/light/search.svg') no-repeat;
}
.ico-tag {
	background: url('./../icon/light/tag.svg') no-repeat;
}
.ico-languages {
	background: url('./../icon/light/languages.svg') no-repeat;
}
.ico-revisions {
	background: url('./../icon/light/revisions.svg') no-repeat;
}

@media (prefers-color-scheme: dark) {
	:root:not([data-theme="light"]) {
		.ico-reload {
			background: url('./../icon/light/reload.svg') no-repeat;
		}
		.ico-menu {
			background: url('./../icon/dark/menu.svg') no-repeat;
		}
		
		.ico-overflow-menu {
			background: url('./../icon/dark/overflow-menu.svg') no-repeat;
		}
		.ico-addbookmark {
			background: url('./../icon/dark/bookmark.svg') no-repeat;
		}
		.ico-removebookmark {
			background: url('./../icon/dark/bookmark-remove.svg') no-repeat;
		}
		.ico-delete {
			background: url('./../icon/dark/delete.svg') no-repeat;
		}
		.ico-edit {
			background: url('./../icon/dark/edit.svg') no-repeat;
		}
		.ico-copy {
			background: url('./../icon/dark/copy.svg') no-repeat;
		}
		.ico-source {
			background: url('./../icon/dark/text.svg') no-repeat;
		}
		.ico-feed {
			background: url('./../icon/dark/feed.svg') no-repeat;
		}
		.ico-info {
			background: url('./../icon/dark/dialog-info.svg') no-repeat;
		}
		.ico-tick {
			background: url('./../icon/dark/tick.svg') no-repeat;
		}
		.ico-warning {
			background: url('./../icon/dark/warning.svg') no-repeat;
		}
		.ico-add-page {
			background: url('./../icon/dark/page-add.svg') no-repeat;
		}
		.ico-page {
			background: url('./../icon/dark/show.svg') no-repeat;
		}
		.ico-comment {
			background: url('./../icon/dark/comment.svg') no-repeat;
		}
		.ico-attachment {
			background: url('./../icon/dark/attachment.svg') no-repeat;
		}
		.ico-upload {
			background: url('./../icon/dark/upload.svg') no-repeat;
		}
		.ico-unlocked {
			background: url('./../icon/dark/unlocked.svg') no-repeat;
		}
		.ico-locked {
			background: url('./../icon/dark/locked.svg') no-repeat;
		}
		.ico-search {
			background: url('./../icon/dark/search.svg') no-repeat;
		}
		.ico-tag {
			background: url('./../icon/dark/tag.svg') no-repeat;
		}
		.ico-languages {
			background: url('./../icon/dark/languages.svg') no-repeat;
		}
		.ico-revisions {
			background: url('./../icon/dark/revisions.svg') no-repeat;
		}
}}
/* ... */

